Fixes after testing

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Harmesh Uppal - CV</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./styles/main.css" />
         <link rel="stylesheet" href="./styles/sweetalert2.min.css" />
+        <link rel="stylesheet" href="./styles/main.css" />
         <script type="application/javascript"
                 src="https://www.google.com/recaptcha/api.js?render=6LfRZrUhAAAAAJ5O2p0hgsE0uFStSIeOz1aemopm"></script>
         <script type="text/javascript" src="./scripts/sweetalert2.all.min.js"></script>
@@ -30,7 +30,7 @@
                 </div>
                 <div id="profile-info">
                     <h1>Harmesh Uppal</h1>
-                    <p>Full-stack developer with over 10 years experience who specialises in PHP and JavaScript</p>
+                    <p>Full-stack developer with over 10 years experience specialising in PHP and JavaScript</p>
                     <p>
                         <span>Location:&nbsp;</span>West Bromwich, UK
                     </p>
@@ -91,8 +91,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">PHP Developer - Tucasi</h3>
                         <div class="workexp-entry-datelocation">
-                            Eastleigh
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">Eastleigh</span>
                             Nov 20 – Present
                         </div>
                     </div>
@@ -110,8 +109,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">PHP Developer - MRI Software</h3>
                         <div class="workexp-entry-datelocation">
-                            Sutton Coldfield
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">Sutton Coldfield</span>
                             Jul 19 – Oct 20
                         </div>
                     </div>
@@ -128,8 +126,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">Senior Developer - MoreNiche</h3>
                         <div class="workexp-entry-datelocation">
-                            Nottingham
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">Nottingham</span>
                             Jan 18 – Jul 19
                         </div>
                     </div>
@@ -147,8 +144,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">Web Developer - FPS Distribution</h3>
                         <div class="workexp-entry-datelocation">
-                            Stratford-upon-Avon
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">Stratford-upon-Avon</span>
                             Jun 16 – Jan 18
                         </div>
                     </div>
@@ -164,8 +160,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">Software Developer -<br /> Carphone Warehouse</h3>
                         <div class="workexp-entry-datelocation">
-                            Loughborough
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">Loughborough</span>
                             Jun 15 – Apr 16
                         </div>
                     </div>
@@ -181,8 +176,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">Web Developer - Twist Digital</h3>
                         <div class="workexp-entry-datelocation">
-                            Nottingham
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">Nottingham</span>
                             Apr 13 – Jun 15
                         </div>
                     </div>
@@ -199,8 +193,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">Freelance Web Developer</h3>
                         <div class="workexp-entry-datelocation">
-                            West Bromwich
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">West Bromwich</span>
                             Mar 12 – Mar 13
                         </div>
                     </div>
@@ -217,8 +210,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">Web Developer - Turn90</h3>
                         <div class="workexp-entry-datelocation">
-                            Birmingham
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">Birmingham</span>
                             Jan 11 - Mar 12
                         </div>
                     </div>
@@ -234,8 +226,7 @@
                     <div class="workexp-entry-header">
                         <h3 class="workexp-entry-title">Web Developer - Clownfish Design</h3>
                         <div class="workexp-entry-datelocation">
-                            Birmingham
-                            <span class="workexp-entry-separator"></span>
+                            <span class="workexp-entry-location">Birmingham</span>
                             Jan 11 - Mar 12
                         </div>
                     </div>
