Update date for last job

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <h3 class="workexp-entry-title">Web Developer - Clownfish Design</h3>
                         <div class="workexp-entry-datelocation">
                             <span class="workexp-entry-location">Birmingham</span>
-                            Jan 11 - Mar 12
+                            May 10 – Aug 10
                         </div>
                     </div>
                     <div class="workexp-entry-info">A digital agency with all clients in Birmingham.</div>
