--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="header-wrapper">
                 <div id="header-logo">Curriculum Vitae</div>
                 <div id="header-links">
-                    <a href="https://github.com/meshu-dev" target="_blank" class="header-link">Download</a>
+                    <a href="./cv.pdf" target="_blank" class="header-link">Download</a>
                     <span class="header-link" onclick="showContactPopup()">Contact</span>
                 </div>
             </div>
