--- a/index.html
+++ b/index.html
@@ -244,15 +244,28 @@
             <div class="contactform">
                 <div class="contactform-row">
                     <span>Name:</span>
-                    <input type="text" name="name" value="" required />
+                    <input type="text"
+                           name="name"
+                           minlength="3"
+                           maxlength="100"
+                           value=""
+                           required />
                 </div>
                 <div class="contactform-row">
                     <span>Email:</span>
-                    <input type="text" name="email" value="" required />
+                    <input type="email"
+                           name="email"
+                           minlength="5"
+                           maxlength="100"
+                           value=""
+                           required />
                 </div>
                 <div class="contactform-row">
                     <span>Message:</span>
-                    <textarea  name="message" required></textarea>
+                    <textarea name="message"
+                              minlength="5"
+                              maxlength="500"
+                              required></textarea>
                 </div>
             </div>
         </div>
